# python-microsoft

./: .gitignore  APIExample.py  image_work.py  json.json  json1.json  out.txt  test.hs  test.ipynb
microsoft-test/: microsoft-test.cabal  stack.yaml
microsoft-test/.stack-work/install/x86_64-linux/lts-7.13/8.0.1/flag-cache/: QuickCheck-2.8.2-B7cXgOk7OAiKrNRsk2SfuA  StateVar-1.1.0.4-CJpWsiXJdd89SnV9dZtTwc  adjunctions-4.3-3ol9sWZt3In19pwXwPv3Xc  aeson-0.11.2.1-5ZQWuTFmffALcfpzDCXoOz  aeson-compat-0.3.6-5wE6V2cyaFcB5no9HXBKW5  aeson-pretty-0.8.2-FONEppYcAcNL67yNmD5AQ1  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base-orphans-0.5.4-5IQvrjd7gNP548VkOOyIq6  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  bifunctors-5.4.1-8Xk5Wsnk1fr6rBLkW9MO8p  bindings-DSL-1.0.23-GUrVdpTUVQC2JWoov2sGwA  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.3-8MBPJsFNBtBBD2gWERenva  blaze-markup-0.7.1.1-IE161DWDHNXF9O8bBguli5  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytes-0.15.2-E6X198bH6LOIR7jMjbNIT2  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  bytestring-conversion-0.3.1-EvX949he2UAKBbGbE7IZfu  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  charset-0.3.7.1-4lsFvOcM7i5BbmeeHj6Z66  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  comonad-5-2RMxpSOQ5MCHLHIelJrHD4  connection-0.2.6-HdqI1haOFiwKHVrIKjItoA  contravariant-1.4-KSQE31a7FruKHDlp90hIUT  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  cryptohash-0.11.9-9KNu0EEbreBFrmNJAeHgYz  cryptonite-0.19-G9PYO4oOEqhDTta2u9rAaU  data-default-class-0.1.2.0-FYQpjIylblBDctdkHAFeXA  distributive-0.5.0.2-Cdz2vLOk85j1doGXLcictT  (+99 more)
microsoft-test/.stack-work/install/x86_64-linux/lts-7.13/8.0.1/lib/x86_64-linux-ghc-8.0.1/microsoft-test-0.1.0.0-3qMmdpFfAwTCtnmzbBkpSm/: Lib.dyn_hi  Lib.hi  MicrosoftApiCall.dyn_hi  MicrosoftApiCall.hi
microsoft-test/.stack-work/install/x86_64-linux/lts-7.13/8.0.1/lib/x86_64-linux-ghc-8.0.1/microsoft-test-0.1.0.0-8FScfVcJ4L81ZbigokZs6j/: Lib.dyn_hi  Lib.hi
microsoft-test/.stack-work/install/x86_64-linux/lts-7.13/8.0.1/lib/x86_64-linux-ghc-8.0.1/microsoft-test-0.1.0.0-9W82UEN8zWJ3Udq2ztrkf4/: Lib.dyn_hi  Lib.hi  (+2 more)
microsoft-test/.stack-work/install/x86_64-linux/lts-7.13/8.0.1/pkgdb/: nat-0.3-uZbWRTWNbXHd9jp1fRpAM.conf  opencv-0.0.0-8JpdBAyidfO5V8I1hJAHiz.conf  package.cache
microsoft-test/data/: plz.txt
microsoft-test/output/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  116.txt  118.txt  119.txt  12.txt  121.txt  122.txt  123.txt  125.txt  126.txt  129.txt  13.txt  131.txt  132.txt  133.txt  134.txt  135.txt  136.txt  137.txt  139.txt  14.txt  140.txt  141.txt  142.txt  (+95 more)
microsoft-test/src/: 0.txt  GetUsefulInfo.hs  GetWords.hs  JSONInterpreter.hs  Lib.hs  MicrosoftApiCall.hs  TextCorrector.hs  TextOrderer.hs  Utils.hs  WordCorrector.hs
(+153 files in other folders)
