name:                microsoft-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/microsoft-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:  BangPatterns
                       DataKinds
                       DeriveGeneric
                       FlexibleInstances
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiParamTypeClasses
                       OverloadedStrings
                       PackageImports
                       PolyKinds
                       ScopedTypeVariables
                       TupleSections
                       TypeFamilies
                       TypeOperators
  exposed-modules:     Lib
                     , GetWords
                     , JSONInterpreter
                     , MicrosoftApiCall
                     , TextCorrector
                     , TextOrderer
                     , WordCorrector
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-compat
                     , attoparsec
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , containers
                     , directory
                     , http-client
                     , http-client-tls
                     , http-media
                     , linear
                     , lucid
                     , mtl
                     , nat
                     , opencv
                     , primitive
                     , regex-pcre
                     , regex-posix
                     , servant
                     , servant-server
                     , servant-client
                     , split
                     , string-conversions
                     , text
                     , text-icu
                     , time
                     , transformers
                     , unordered-containers
                     , vector
                     , vector-algorithms
                     , wai
                     , warp
  default-language:    Haskell2010

executable microsoft-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , microsoft-test
  default-language:    Haskell2010

test-suite microsoft-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , microsoft-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/microsoft-test
